fixed dark mode input glitch

--- a/dark.css
+++ b/dark.css
@@ -21,9 +21,9 @@ input {
     font-size: x-large;
     background-color: #2f2247;
     border: #4a2a82 solid 2px;
-    border-radius: 10px;
+    border-radius: 20px;
     color: white;
-    width: ;
+    width: 90%;
     height: 8%;
 }
 
